--- a/ex003/index.html
+++ b/ex003/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>Javascript</title>
+    <style>
+        body{
+    background-color: rgb(47, 107, 160);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+    </style>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
