--- a/exercicios/ex017/index.html
+++ b/exercicios/ex017/index.html
@@ -8,14 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Converter reais para dolares</p>
-
-    <form action="">
-        <fieldset>
-            <label for="">Reais</label>
-            <input type="text" id="reais">
-            <input type="submit" onclick="conversor()">
-        </fieldset>
-    </form>
+    <h1>teste</h1>
 </body>
 </html>
