--- a/exercicios/ex022/index.html
+++ b/exercicios/ex022/index.html
@@ -9,13 +9,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1 id="p">Olá, Mundo!</h1>
-    </div>
-
-    <div id="minha-div-1" class="minha-div">
-        <h3>can you see me?</h3>
-    </div>
-    <button type="button" onclick="toggleDiv()">Click Me!</button>
+    <main>
+        <div class="one">
+            <h1 id="p">Olá, Mundo!</h1>
+        </div>
+        <div id="minha-div-1" class="minha-div, one">
+            <h3>can you see me?</h3>
+        </div>
+        <div class="button">
+            <button type="button" onclick="toggleDiv()">Click Me!</button>
+        </div>
+    </main>
 </body>
 </html>
