--- a/exercicios/ex004/index.html
+++ b/exercicios/ex004/index.html
@@ -14,8 +14,9 @@
             text-align: center;
         }
     </style>
-</head>
 <body>
 
+    <script src="script.js"></script>
+</head>
 </body>
 </html>
