--- a/exercicios/ex018/index.html
+++ b/exercicios/ex018/index.html
@@ -25,6 +25,8 @@
     <tr>
       <td class="dir">valor total:</td><td><input type="text" name="total" id="total" value="0.00" /></td>
     <tr>            
-</table>                  
+</table>  
+
+<script src="main.js"></script>
 </body>
 </html>
