--- a/exercicios/ex031/index.html
+++ b/exercicios/ex031/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Hora do Dia</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Titulo</h1>
+        <h1>Hora do Dia</h1>
     </header>
 
     <section>
-        <div>
-            testando...
+        <div id="msg">
+            Aqui  vai ser a mensagem...
         </div>
 
-        <div>
-            Ola!
+        <div id="foto">
+            <img id="imagem" src="modelo/img/manha.png" alt="foto do dia">
         </div>
     </section>
 
